[gd_scene load_steps=11 format=3 uid="uid://b64ahqcgprwjx"]

[ext_resource type="Script" path="res://scripts/towers/dart/RangeCol.gd" id="2_jburb"]
[ext_resource type="Texture2D" uid="uid://cpofpbi4l2l7l" path="res://Assets/darts.png" id="3_g0tmt"]
[ext_resource type="Script" path="res://scripts/towers/dart/mainCol.gd" id="4_ldh6a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ktkjf"]
atlas = ExtResource("3_g0tmt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_y8oli"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktkjf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_am05h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o5u4x"]

[sub_resource type="SphereMesh" id="SphereMesh_31bq7"]
radius = 10.0
height = 20.0

[sub_resource type="CanvasTexture" id="CanvasTexture_p4t5s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ahtem"]

[node name="dart_monkey" type="Area2D"]
z_index = 2
position = Vector2(436, 234)
scale = Vector2(0.8, 0.8)
script = ExtResource("4_ldh6a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_y8oli")
animation = &"idle"

[node name="rangeCol" type="Area2D" parent="."]
script = ExtResource("2_jburb")

[node name="range" type="CollisionShape2D" parent="rangeCol"]
scale = Vector2(20, 20)
shape = SubResource("CircleShape2D_am05h")

[node name="rangeMesh" type="MeshInstance2D" parent="rangeCol"]
z_index = 1
material = SubResource("ShaderMaterial_o5u4x")
position = Vector2(-3.05176e-05, 0)
scale = Vector2(20, 20)
mesh = SubResource("SphereMesh_31bq7")
texture = SubResource("CanvasTexture_p4t5s")

[node name="main" type="Area2D" parent="." groups=["mainCol"]]

[node name="mainCol" type="CollisionShape2D" parent="main"]
scale = Vector2(6, 6)
shape = SubResource("CircleShape2D_ahtem")

[node name="attackCooldown" type="Timer" parent="."]
wait_time = 1.115

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
z_index = 2

[connection signal="area_entered" from="rangeCol" to="." method="_on_range_col_area_entered"]
[connection signal="area_entered" from="main" to="." method="_on_area_entered"]
[connection signal="area_exited" from="main" to="." method="_on_area_exited"]
[connection signal="timeout" from="attackCooldown" to="main" method="_on_attack_cooldown_timeout"]
